--- a/index.html
+++ b/index.html
@@ -1,10 +1,18 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>e-mwananchi-fronted</title>
+    <title>E-Mwananchi</title>
+    <!-- Add Tailwind CSS CDN -->
+    <script src="https://cdn.tailwindcss.com"></script>
+    <style>
+      /* Custom Kenya colors */
+      .bg-kenya-green { background-color: #006600; }
+      .text-kenya-green { color: #006600; }
+      .border-kenya-green { border-color: #006600; }
+    </style>
   </head>
   <body>
     <div id="root"></div>
